--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "^3.0.10"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "electron-prebuilt-compile": "^3.0.10",
     "electron-reload": "^1.4.0",
     "react": "^16.6.3",
